samples/_failures_safe/1761191005_9e576a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80856fa4.c: In function ‘main’:
./samples/SAFE/__tmp_80856fa4.c:160:17: error: expected expression at end of input
  160 |                 if (
      |                 ^~
./samples/SAFE/__tmp_80856fa4.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_80856fa4.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_80856fa4.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_80856fa4.c:160:17: error: expected declaration or statement at end of input
